src/test/examples/custom/valid/class/defineMultipleClassesWithSameAttributes.wacc
# Different classes can have their attributes be named the same as other classes

begin
  class H is 
    private int v
    H(int v) 
    end
    private int J(int v) is 
      return 0
    end
  end
  class K is 
    private int v
    K(int v) 
    end
    private int P(int v) is 
      return 0
    end
  end
  int k = 0 
end